fix icon vertical-alignement

--- a/assets/styl/_elements/_icon.styl
+++ b/assets/styl/_elements/_icon.styl
@@ -12,7 +12,7 @@
 .icon
     _fontload($fontstack-secondary)
     display inline-block
-    vertical-align top
+    vertical-align middle
     border-radius .5em
     padding .2em .3em
     text-align center
